--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </button>
 
         <div class="logo">
-            <img src="Images/logo jpg.jpg" alt="Magic Mugs Cafe Logo">
+            <img src="Images/logo jpg.JPG" alt="Magic Mugs Cafe Logo">
         </div>
         
         <nav>
